--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joontop-circlechart",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "CircleChart",
   "main": "index.js",
   "author": "joontop",
@@ -24,8 +24,8 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015-ie": "^6.7.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.9"
