--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "joontop-circlechart",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "CircleChart",
-  "main": "index.js",
+  "main": "./build/circle_chart.js",
   "author": "joontop",
   "license": "ISC",
   "repository": {
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/joontop/joontop-circleChart.git"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production",
     "dev": "webpack-dev-server --open --progress"
   },
   "email": "zoontop@naver.com",
