--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "joontop-circlechart",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "CircleChart",
-  "main": "index.js",
+  "main": "lib/index.js",
   "author": "joontop",
   "license": "ISC",
   "repository": {
@@ -24,7 +24,8 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.9"
