--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joontop-circlechart",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "CircleChart",
   "main": "lib/index.js",
   "author": "joontop",
@@ -23,10 +23,11 @@
     "pie chart"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.4",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.9"
